--- a/exercises/events/example.html
+++ b/exercises/events/example.html
@@ -5,6 +5,17 @@
   <h1>Click the button</h1>
   <button>Me!</button>
   <script>
+    $('button').on('click', () => {
+      console.log('Hello');
+    });
+
+    $('button').on('click', () => {
+      console.log('There!');
+    });
+
+    $('button').trigger('click');
+
     
   </script>
+  <!-- $('button').off('click'); -->
 </body>
